@@ -58,7 +58,7 @@ ToDo
 
 """
 
-__version__ = '1.5.dev11'
+__version__ = '1.5.dev12'
 
 import sys
 import os
